Fri May 11 16:20:40 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in tests/XSLTMark/Makefile.am: try to handle gracefully
	  the cases where perl is not in the path (nor in /usr/bin)
	* tests/docbook/result/html/gdp-handbook.html
	  tests/docbook/result/html/kwrite.html
	  tests/docbook/test/gdp-handbook.xml
	  tests/docbook/test/kwrite.xml: commited a few more DocBook tests

Wed May  9 12:29:47 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltproc.c: added --nonet and --warnnet to catch
	  cases where a network access is needed to load a DTD or entity
	* tests/docbook/Makefile.am: added --nonet
	* tests/docbook/test/classsynop.xml tests/docbook/test/docbook40.xml:
	  fixed 2 tests as a result

Wed May  9 10:43:53 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in tests/docbook/Makefile.am tests/docbook/**/Makefile.am:
	  try to remove the unneeded docbook Makefile stuff 

Tue May  8 16:18:19 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* doc/xslt.html: fixed a link error
	* libxslt/transform.c libxslt/xsltutils.c: fixed DOCTYPE generation
	* libxslt/xsltproc.c: cleaned up the --repeat loop
	* tests/documents/result.xhtml tests/xmlspec/REC-xml-20001006*.html:
	  fixed the DOCTYPE in tests output
	* tests/docs/bug-25-.xml tests/doc/Makefile.am 
	  tests/general/bug-25-.* tests/general/Makefile.am : added a new
	  test case and fixed the EXTRA_DIST

Mon May  7 22:27:03 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/extra.c: add more debug to xsltDebug
	* libxslt/transform.c: spent a few hours tracking down an ugly
	  race like bug in xsltCopyTreeList() arghhh
	* libxslt/xsltproc.c: call xmlInitMemory() explictely

Mon May  7 11:38:54 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* doc/internals.html: more work done on the doc, mostly complete
	  except the section on the XSLT stack and the extensions API
	  since both still need more work.
