@@ -29,6 +29,7 @@ EXTRA_DIST = \
     bug-23-.out bug-23-.xsl \
     bug-24-.out bug-24-.xsl \
     bug-25-.out bug-25-.xsl \
+    bug-26-.out bug-26-.xsl \
     character.out character.xsl \
     character2.out character2.xsl \
     itemschoose.out itemschoose.xsl \
